<resources>
    <string name="app_name">NewsApp</string>
    <string name="world_news">World News</string>
    <string name="topics">Topics</string>
    <string name="settings">Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="us_canada"><![CDATA[US & Canada]]></string>
    <string name="latin_america">Latin America</string>
    <string name="middle_east">Middle East</string>
    <string name="australia">Australia</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <string name="business">Business</string>
    <string name="tech">Tech</string>
    <string name="health">Health</string>
    <string name="entertainment">Entertainment</string>
    <string name="sport">Sport</string>
    <string name="sample_text">Tesla Issues Fourth Recall in Two Months, This Time Affecting 40,000 Vehicles</string>
    <string name="text_page_example">adadada daaaaaaaaafaaaaaaaafqfqfqfqqfqfqf fqfqfq q fqf q qf qfqf qf qfaf fasf asf asfa fadadada daaaaaaaaaaafqfqfqfqqfqfqf fqfqfq q fqf q qf qfqf qf qfaf as fas fa sfa sf  fasf asf asfa f</string>
    <string name="united_states">United States</string>
    <string name="poland">Poland</string>
    <string name="ukraine">Ukraine</string>
    <string name="japan">Japan</string>
    <string name="canada">Canada</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="service_is_unavailable">Service is Unavailable</string>
    <string name="link"><a href=" "><font color='#FFF5593A'>Link to source</font></a> </string>
    <string name="science">Science</string>
    <string name="space">|</string>
    <string name="image_in_list_news">image in list news</string>
    <string name="arrow_in_header">Arrow in header</string>
    <string name="choose_your_country"><b>Choose your country </b>to create a personal list</string>
    <string name="all_latest_news_from_your_country_will_appear_hear">All latest news from your country will appear hear.</string>
    <string name="ok_let_s_get_started">OK, let\'s get started</string>
    <string name="choose_country">Choose your country</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="success">Success</string>
    <string name="done">Done</string>
    <string name="top_stories">Top Stories</string>
    <string name="popular">Popular</string>
    <string name="my_news">My News</string>
    <string name="favorite">Favorite</string>
    <string name="no_saved_news_add_news_in_favorite_to_display_them_here">No saved news</string>
    <string name="add_some_news_to_favorite_and_they_show_up_here">Add some news to favorite and they show up here</string>
    <string name="delete_all_saved_news">Delete all saved news</string>
</resources>