<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A4A4A4"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/topics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topics"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="end|center"
            android:src="@drawable/icon_arrow_down"
            android:contentDescription="@string/arrow_in_header" />
    </FrameLayout>

    <TextView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/topicsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="6dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/business"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/tech"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/health"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/sport"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/entertainment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/entertainment"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/science"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/science"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/worldNews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/world_news"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="end|center"
            android:src="@drawable/icon_arrow_down"
            android:contentDescription="@string/arrow_in_header" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/worldList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="6dp"
        tools:visibility="visible"
        android:visibility="gone">

        <TextView
            android:id="@+id/us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/united_states"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/ukraine"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/poland"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/jp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/japan"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:text="@string/canada"
            android:textColor="@color/black"
            android:textSize="18sp" />


    </LinearLayout>

</LinearLayout>